--- a/doc/2.md
+++ b/doc/2.md
@@ -34,7 +34,7 @@
   </dependencies>
 ```
 
-添加junit、common-logging、slf4j 及 shiro-core 依赖即可。
+添加junit、common-logging及 shiro-core 依赖即可。
 
 #### 登陆 / 退出
 1、首先准备一些用户身份 / 凭据（shiro.ini）
@@ -45,7 +45,7 @@ wang=123
 ```
 此处使用 ini 配置文件，通过[users]指定了两个主体：zhang/123、wang/123。
 
-2、测试用例（com.shiro.test.LoginLogoutTest）
+2、测试用例（com.shiro.test.chapter2.LoginLogoutTest）
 ```
 @Test
 public void testHelloworld() {
@@ -133,7 +133,7 @@ AuthenticationInfo getAuthenticationInfo(AuthenticationToken token) throws Authe
 
 **单 Realm 配置**
 
-1、自定义 Realm 实现（com.shiro.test.MyRealm1）：
+1、自定义 Realm 实现（com.shiro.test.chapter2.realm.MyRealm1）：
 ``` java
 public class MyRealm1 implements Realm {
     public String getName() {
@@ -167,8 +167,8 @@ securityManager.realms=$myRealm1
 ```
 通过 $name 来引入之前的 realm 定义
 
-3、测试用例请参考 com..shiro.test.LoginLogoutTest 的 
-testHelloworld 测试方法，只需要把之前的 shiro.ini 配置文件改成 shiro-realm.ini 即可。
+3、测试用例请参考 com.shiro.test.chapter2.LoginLogoutTest 的 
+testCustomRealm 测试方法，只需要把之前的 shiro.ini 配置文件改成 shiro-realm.ini 即可。
 
 **多Realm配置**
 
@@ -182,8 +182,8 @@ securityManager.realms=$myRealm1,$myRealm2
 ```
 securityManager 会按照 realms 指定的顺序进行身份认证。
 
-2、测试用例请参考 com..shiro.test.LoginLogoutTest 的 
-  testHelloworld 测试方法。
+2、测试用例请参考 com.shiro.test.chapter2.LoginLogoutTest 的 
+  testCustomMultiRealm  测试方法。
 
 **Shiro 默认提供的 Realm**
 
@@ -311,7 +311,7 @@ myRealm3=com.shiro.test.MyRealm3
 securityManager.realms=$myRealm1,$myRealm3
 ```
 
-2、测试代码（com.shiro.test.LoginLogoutTest）
+2、测试代码（com.shiro.test.chapter2.AuthenticatorTest）
 
 - 通用户登陆逻辑
 
