--- a/doc/3.md
+++ b/doc/3.md
@@ -88,7 +88,7 @@ wang=123,role1
 就需要在相应的 Realm 中返回角色信息，也就是说 Shiro 不负责维护用户-角色信息，需要应用提供，
 Shiro 只是提供相应的接口方便验证，后续会介绍如何动态的获取用户角色。
 
-2、测试用例(com.shiro.test.LoginLogoutTest)
+2、测试用例(com.shiro.test.chapter3.RoleTest)
 ```
 @Test
 public void testHasRole() {
@@ -138,7 +138,7 @@ role2=user:create,user:delete
 即角色是权限集合；Shiro 同样不进行权限的维护，需要我们通过 Realm 返回相应的权限信息。
 只需要维护“用户——角色”之间的关系即可。
 
-2、测试用例(com.shiro.test.LoginLogoutTest)
+2、测试用例(com.shiro.test.chapter3.PermissionTest)
 ```
 @Test
 public void testIsPermitted() {
